unpackaged/main/default/objects/datamask__Masking_Object__mdt/datamask__Masking_Object__mdt.object-meta.xml
<CustomObject>
    <label>Masking Object</label>
    <pluralLabel>Masking Objects</pluralLabel>
</CustomObject>