unpackaged/main/default/objects/datamask__Masking_Object__mdt/fields/datamask__Batch_Data__c.field-meta.xml
<CustomField>
    <fullName>datamask__Batch_Data__c</fullName>
    <label>Batch Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>