unpackaged/main/default/objects/datamask__Masking_Object__mdt/fields/datamask__Filter_Enabled__c.field-meta.xml
<CustomField>
    <fullName>datamask__Filter_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Enabled</label>
    <type>Checkbox</type>
</CustomField>