unpackaged/main/default/objects/datamask__Masking_Object__mdt/fields/datamask__Master_Object__c.field-meta.xml
<CustomField>
    <fullName>datamask__Master_Object__c</fullName>
    <label>Master Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>