unpackaged/main/default/objects/datamask__Masking_Object__mdt/fields/datamask__Number_of_Fields__c.field-meta.xml
<CustomField>
    <fullName>datamask__Number_of_Fields__c</fullName>
    <label>Number of Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>