unpackaged/main/default/objects/datamask__Masking_Object__mdt/fields/datamask__Raw_Filter_Data__c.field-meta.xml
<CustomField>
    <fullName>datamask__Raw_Filter_Data__c</fullName>
    <label>Raw Filter Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>