unpackaged/main/default/objects/datamask__Masking_Object__mdt/fields/datamask__Record_Count__c.field-meta.xml
<CustomField>
    <fullName>datamask__Record_Count__c</fullName>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>