unpackaged/main/default/objects/datamask__Masking_Object__mdt/fields/datamask__Run_In_Serial__c.field-meta.xml
<CustomField>
    <fullName>datamask__Run_In_Serial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run In Serial</label>
    <type>Checkbox</type>
</CustomField>