unpackaged/main/default/objects/datamask__Masking_Object__mdt/fields/datamask__Where_Criteria__c.field-meta.xml
<CustomField>
    <fullName>datamask__Where_Criteria__c</fullName>
    <label>Where Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>