unpackaged/main/default/objects/datamask__Masking_Object__mdt/fields/datamask__Where_Criteria_LT__c.field-meta.xml
<CustomField>
    <fullName>datamask__Where_Criteria_LT__c</fullName>
    <label>Where Criteria LT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>